# thumalien

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: api.md  architecture.md  guide_utilisateur.md
notebooks/: exploration.ipynb  fine_tuning.ipynb
scripts/: init_db.sql
src/: __main__.py  cli.py  pipeline.py  schemas.py
src/collector/: bluesky_client.py
src/dashboard/: app.py
src/database/: connection.py  models.py  repository.py
src/explainability/: explainer.py
src/models/: emotion_analyzer.py  fake_news_detector.py
src/monitoring/: energy_tracker.py
src/preprocessing/: text_processor.py
src/training/: dataset.py  evaluate.py  train.py
tests/: test_collector.py  test_models.py  test_preprocessing.py  test_training.py
