[project]
name = "thumalien"
version = "0.1.0"
description = "Détection de Fake News sur Bluesky - Projet M1 Data & IA"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (géré par le formatter)
    "B008",  # do not perform function calls in argument defaults (typer)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
